--- a/styles/theorie.css
+++ b/styles/theorie.css
@@ -18,3 +18,13 @@
     color: white;
   }
   
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+.container{
+    width: 96%;
+    margin: 20px auto;
+}
