--- a/pages/HTML/library.css
+++ b/pages/HTML/library.css
@@ -34,8 +34,8 @@ h1{
 }
 
 button{
-    background: #76c2af;
-    border-color: #76c2af;
+    background: #107cfc;
+    border-color: #107cfc;
     border-radius: 7px;
     padding: 6px 6px;
     color: #fff;
