--- a/styles/vragen.css
+++ b/styles/vragen.css
@@ -5,7 +5,7 @@ html, body {
     height: 100%;
     margin: 0;
     position: relative;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
 }
 
 #body-text{
