--- a/styles/index.css
+++ b/styles/index.css
@@ -20,3 +20,15 @@ body{
   .card {
     max-width: 400px;
     border-radius: 8px;}
+
+.jumbotron{
+    background-color: rgba(0, 123, 255, 0.4);
+    margin: 25px;
+}
+*{
+    font-weight: 500;
+}
+
+#footer{
+    background-color: rgba(0, 123, 255, 0.4) !important;
+}
