--- a/styles/theorie.css
+++ b/styles/theorie.css
@@ -114,3 +114,46 @@ footer {
 #startbutton{
     visibility: hidden;
 }
+
+#previous-arrow {
+    position: fixed;
+    top: 50%;
+    right: 20px;
+    background-color: #087cfc;
+    color: white;
+    font-size: 2em;
+    text-align: center;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  #previous-arrow:hover {
+    background-color: #0c70db;
+    color:white;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+    text-decoration: none; /* Ensures no underline appears on hover */
+    cursor:pointer;
+  }
+#next-arrow {
+    position: fixed;
+    top: 40%;
+    right: 20px;
+    background-color: #087cfc;
+    color: white;
+    font-size: 2em;
+    text-align: center;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  #next-arrow:hover {
+    background-color: #0c70db;
+    color:white;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+    text-decoration: none; /* Ensures no underline appears on hover */
+    cursor:pointer;
+  }
