--- a/styles/vragen.css
+++ b/styles/vragen.css
@@ -1,11 +1,10 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
-    overflow-y: hidden;
     height: 100%;
     margin: 0;
     position: relative;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
 }
 
 #body-text{
