--- a/styles/index.css
+++ b/styles/index.css
@@ -32,3 +32,12 @@ body{
 #footer{
     background-color: rgba(0, 123, 255, 0.4) !important;
 }
+
+#inloggen:hover {
+    animation: shake 2s ease infinite;
+  }
+  @keyframes shake {
+      0%, 100% {transform: translateX(0);}
+      10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
+      20%, 40%, 60%, 80% {transform: translateX(10px);}
+  }
