--- a/styles/theorie.css
+++ b/styles/theorie.css
@@ -157,3 +157,9 @@ footer {
     text-decoration: none; /* Ensures no underline appears on hover */
     cursor:pointer;
   }
+
+  .foto{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
